<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.milad.expenses.MainActivity"

    android:background="@color/colorMilk"
    android:gravity="right"
    android:orientation="vertical"
    android:weightSum="10"
    >

    <ImageView
        android:layout_width="74dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/abacus"
        android:id="@+id/imageView" />

    <TextView
        android:id="@+id/appname"
        android:layout_gravity="center"
        android:textColor="@color/colorMainText"
        android:layout_width="wrap_content"
        android:text="@string/Hi"
        android:textSize="24sp"
        android:layout_weight="0.1"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/main_textview"
        android:layout_gravity="center"
        android:textColor="@color/colorMainText"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:textSize="16sp"
        android:text="@string/welcome"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/google"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:text="@string/google"
            android:drawableRight="@mipmap/google"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGoogle"/>

        <TextView
            android:layout_width="0dp"
            android:gravity="bottom"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/twitter"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:drawableRight="@mipmap/twitter"
            android:layout_width="wrap_content"
            android:text="@string/twitter"
            android:textColor="@color/colorWhite"
            android:background="@color/colorTwitter" />
    </LinearLayout>

    <TextView
        android:text="@string/or"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/or"
        android:layout_weight="0.60" />

    <EditText
        android:drawableRight="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:id="@+id/Em"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:hint="@string/Email"
        android:layout_gravity="center"
        android:background="@color/colorLightGray"
        android:textColor="@color/colorGray"
        android:gravity="right"/>
    <EditText
        android:drawableRight="@drawable/ic_padlock"
        android:drawablePadding="10dp"
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:padding="10sp"
        android:hint="@string/Pass"
        android:layout_gravity="center"
        android:background="@color/colorLightGray"
        android:textColor="@color/colorGray"
        android:gravity="right"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SingIn"
        android:padding="10sp"
        android:layout_marginTop="15sp"
        android:background="@color/colorIcon"
        android:textColor="@color/colorMainText"/>
    <TextView
        android:id="@+id/SingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/SingUp"
        android:textColor="@color/colorMainText"/>
    <TextView
        android:id="@+id/Forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/Forget"
        android:textColor="@color/colorDark"/>
</LinearLayout>
